fix: text-align and default heading

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -112,5 +112,5 @@ html {
     font-style: italic;
     border-left: 3px solid white;
     padding-left: 21px;
-    text-align: justify;
+    /* text-align: justify; */
 }
